# reference-fixer

./: README.md  pyproject.toml  run.bat
src/reference_fixer/: __init__.py  citation_extractor.py  cli.py  pdf_reader.py  ref_parser.py  report.py  scanner.py
src/reference_fixer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
